Add "Administrator" policy in MusicRancho_Web

--- a/MusicRancho_Identity/appsettings.json
+++ b/MusicRancho_Identity/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=MusicRancho_Identity;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=MusicRancho_Identity;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true",
     "inCase": "."
   }
 }
