--- a/MusicRancho_RanchoAPI/appsettings.json
+++ b/MusicRancho_RanchoAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSQLConnection": "Server=.;Database=Music_RanchoAPI;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultSQLConnection": "Server=localhost\\SQLEXPRESS01;Database=Music_RanchoAPI;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET"
