- Creation of common library for storage policies and common objects - Refactor on MinimunAgeHandler - Removed from Identity project keys and policies folders - Remove policy injection on Identity project - Adding custom policy on web project

--- a/MusicRancho_RanchoAPI/MusicRancho_RanchoAPI.csproj
+++ b/MusicRancho_RanchoAPI/MusicRancho_RanchoAPI.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MusicRancho_Common\MusicRancho_Common.csproj" />
     <ProjectReference Include="..\MusicRancho_Identity\MusicRancho_Identity.csproj" />
   </ItemGroup>
 
