--- a/MusicRancho_Web/MusicRancho_Web.csproj
+++ b/MusicRancho_Web/MusicRancho_Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MusicRancho_Common\MusicRancho_Common.csproj" />
     <ProjectReference Include="..\MusicRancho_Utility\MusicRancho_Utility.csproj" />
   </ItemGroup>
 
